# ros_proseco_planning

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  config.h.in  package.xml  pyproject.toml
config/: README.md  install_cue.bash
config/evaluator/: config.json  example_config.json  example_hpot_config.json
config/evaluator/ci_config/: base.json  threshold_base.json
config/evaluator/ci_config/inactive/: parallel.json  threshold_parallel.json
config/hyperparameter_optimization/: config.cue  config.json  example_hp_space.json
config/inverse_reinforcement_learning/: config.cue  config.json  expert_cost_params.md
config/options/: README.md  baseline_options.json  baseline_options_2.json  example_options.json  options.cue  options_basic.json  options_debug.json  options_irl.json  options_irl_experts.json
config/scenarios/: README.md  actionSpace.cue  agent.cue  constants.cue  costModel.cue  desire.cue  generate_scenarios.py  obstacle.cue  road.cue  sc00.cue  sc00.json  sc01.cue  sc01.json  sc02.cue  sc02.json  sc03.cue  sc03.json  sc04.cue  sc04.json  sc05.cue  sc05.json  sc06.cue  sc06.json  sc07.cue  sc07.json  sc08.cue  sc08.json  sc09.cue  sc09.json  sc10.cue  sc10.json  sc11.cue  sc11.json  sc12.cue  sc12.json  sc13.cue  sc13.json  sc14.cue  sc14.json  sc15.cue  (+12 more)
config/scenarios/cue.mod/: module.cue
doc/: MainPage.doxy  Structure.doxy  generate_docs.py
doc/source/: conf.py  index.rst  readme.rst
docs/: annotated.html  classes.html  classproseco__planning_1_1ProSeCoPlanner-members.html  classproseco__planning_1_1ProSeCoPlanner.html  classproseco__planning_1_1ProSeCoPlanner__coll__graph.map  classproseco__planning_1_1ProSeCoPlanner__coll__graph.md5  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f4728ca5a606c6b8bf909a33cb545055.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  pages.html  prosecoPlanner_8h.html  prosecoPlanner_8h__dep__incl.map  prosecoPlanner_8h__dep__incl.md5  prosecoPlanner_8h__incl.map  prosecoPlanner_8h__incl.md5  prosecoPlanner_8h_source.html  todo.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
include/ros_proseco_planning/: prosecoPlanner.h
python/: setup.py
python/proseco/: README.md  requirements.txt
python/proseco/dashboard/: Readme.md  __init__.py  app.py  app_tab_agent.py  app_tab_evaluation.py  app_tab_run.py  callbacks.py  callbacks_tab_agent.py  callbacks_tab_evaluation.py  callbacks_tab_run.py  callbacks_tab_tree.py  index.py  layouts.py  model.py
python/proseco/dashboard/assets/: dndTree.js  tree.css
python/proseco/evaluator/: README.md  __init__.py  autoscaler.yaml  evaluator.py  head.py  progressBar.py  ray.bash  remote.py  util.py
python/proseco/hyperparameter_optimization/: .gitignore  README.md  analyze_optimizer_results.py  analyzer.py  createHPSpace.py  optimization.py  optimizer.py  run_cave_analysis.py
python/proseco/inverse_reinforcement_learning/: README.md  inference.py  inferenceEngine.py  modelBuilder.py  training.py  trainingEngine.py  trajectory.py
python/proseco/inverse_reinforcement_learning/expert_preprocessing/: frenetSystem.py  preprocessor.py  reference.osm  trajectory_1_3_0  trajectory_1_3_1  trajectory_1_3_2
python/proseco/inverse_reinforcement_learning/irl_models/: baseIrlModel.py  utils.py  (+2 more)
python/proseco/testing/: Readme.md  test_random_start_pos.py  tester.py
python/proseco/tests/: __init__.py
python/proseco/utility/: CARLA_README.md  carla_visualization.py  constants.py  import_proseco_data.py  io.py  ui.py  visualize_proseco_data.py
python/proseco/visualization/: base_visualizer.py  reward_visualizer.py  scenario_video_visualizer.py  scenario_visualizer.py  trajectory_velocity_visualizer.py  velocity_visualizer.py
src/: main.cpp  prosecoPlanner.cpp
(+22 files in other folders)
